# onnx_phi_rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  tarpaulin-report.html
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust-setup.yml
_tests/: mnist.rs  squeezenet.rs  thread_manager.rs  upsample.rs  vectorizer.rs
examples/gpt2/examples/: gpt2-no-ndarray.rs  gpt2.rs
examples/model-info/examples/: model-info.rs
examples/sentence-transformers/examples/: semantic-similarity.rs
src/: main.rs
tests/: test.rs
